--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: > # this means to ignore newlines until "baseurl:"
     notebook combines live code, equations, narrative text, visualizations,
     interactive dashboards and other media.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "https://jupyter.org" # the base hostname & protocol for your site
+url: "https://jupyter.qubitpi.org" # the base hostname & protocol for your site
 
 # Build settings
 markdown: kramdown
